--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ a:hover {
   padding: 80px 20px 60px;
   text-align: center;
 }
+h1 {
+  text-align: center;
+}
 .urunler {
   display: flex; /* yan yana diz */
   justify-content: space-between; /* aralarında boşluk bırak */
